--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "1f8dec8c",
+   "id": "86c45cfa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "b570dc0e",
+   "id": "10daf608",
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "2fa794dc",
+   "id": "2de1440a",
    "metadata": {
     "scrolled": true
    },
@@ -70,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90f50152",
+   "id": "cab12441",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "ca2c0e46",
+   "id": "34e3929f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a45a8341",
+   "id": "cc643769",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "1e0e875c",
+   "id": "b19e9448",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "338c7758",
+   "id": "8862d73b",
    "metadata": {},
    "outputs": [
     {
@@ -128,16 +128,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "id": "1c7c90b4",
+   "execution_count": 57,
+   "id": "199a0663",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'result'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-57-8d57e8852913>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[0murl\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m\"http://52.79.123.43:8000/\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m     \u001b[0mr\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mrequests\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpost\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0murl\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdata\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mpayload\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 7\u001b[1;33m     \u001b[0mv\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mr\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mjson\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'result'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      8\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'predict'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mv\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'result'"
+     ]
+    }
+   ],
    "source": [
     "import requests\n",
     "v = []\n",
     "for i in range(len(df)):\n",
     "    payload = dict(df.iloc[i])\n",
-    "    url = \"http://127.0.0.1:8000/predict/\"\n",
+    "    url = \"http://52.79.123.43:8000/\"\n",
     "    r = requests.post(url, data=payload)\n",
     "    v.append(r.json()['result'])\n",
     "\n",
@@ -149,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "ca8cd66f",
+   "id": "08e010b5",
    "metadata": {
     "scrolled": true
    },
@@ -174,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17fa3a49",
+   "id": "34443869",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,6 +198,58 @@
     "    result.append(r.json()['result'])\n",
     "df = df.assign(result  = pd.DataFrame(result, columns=['result']))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "d5c6db60",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "url = \"http://52.79.123.43:8000/predict/\"\n",
+    "\n",
+    "payload = {\n",
+    "    \"Pregnancies\" : 42, \n",
+    "    \"Glucose\" : 42,\n",
+    "    \"BloodPressure\" : 42,\n",
+    "    \"SkinThickness\" : 42,\n",
+    "    \"Insulin\" : 42,\n",
+    "    \"DiabetesPedigreeFunction\" : 42,\n",
+    "    \"Age\" : 42,\n",
+    "    \"BMI\" : 42 \n",
+    "}\n",
+    "r = requests.post(url, data=payload)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "dd63f2dd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'error': '0', 'message': 'Successful'}"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "r.json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f50d8ec9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
