--- a/2021 10 27/김찬울.ipynb
+++ b/2021 10 27/김찬울.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +106,7 @@
        "4    IAH  DFW      -3.0       5.0"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 144,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 141,
    "metadata": {
     "scrolled": true
    },
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,150 +434,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Dest</th>\n",
-       "      <th>Cancelled</th>\n",
-       "      <th>Diverted</th>\n",
-       "      <th>Air</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>356</th>\n",
-       "      <td>MSY</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>358</th>\n",
-       "      <td>MSY</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>360</th>\n",
-       "      <td>LAX</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>361</th>\n",
-       "      <td>LAX</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>362</th>\n",
-       "      <td>DEN</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>227463</th>\n",
-       "      <td>MSY</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>227464</th>\n",
-       "      <td>MSY</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>227465</th>\n",
-       "      <td>MSY</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>227466</th>\n",
-       "      <td>MSY</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>227467</th>\n",
-       "      <td>MSY</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>42261 rows × 4 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       Dest  Cancelled  Diverted  Air\n",
-       "356     MSY          0         0  NaN\n",
-       "358     MSY          0         0  NaN\n",
-       "360     LAX          0         0  NaN\n",
-       "361     LAX          0         0  NaN\n",
-       "362     DEN          0         0  NaN\n",
-       "...     ...        ...       ...  ...\n",
-       "227463  MSY          0         0  NaN\n",
-       "227464  MSY          0         0  NaN\n",
-       "227465  MSY          0         0  NaN\n",
-       "227466  MSY          0         0  NaN\n",
-       "227467  MSY          0         0  NaN\n",
-       "\n",
-       "[42261 rows x 4 columns]"
-      ]
-     },
-     "execution_count": 121,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df3"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 136,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -671,6 +530,109 @@
    ],
    "source": [
     "df4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Cancelled</th>\n",
+       "      <th>Air</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Dest</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>ATL</th>\n",
+       "      <td>141</td>\n",
+       "      <td>7886</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>DAL</th>\n",
+       "      <td>442</td>\n",
+       "      <td>9820</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>DEN</th>\n",
+       "      <td>28</td>\n",
+       "      <td>5920</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>LAX</th>\n",
+       "      <td>33</td>\n",
+       "      <td>6064</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MSY</th>\n",
+       "      <td>40</td>\n",
+       "      <td>6823</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ORD</th>\n",
+       "      <td>99</td>\n",
+       "      <td>5748</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Cancelled   Air\n",
+       "Dest                 \n",
+       "ATL         141  7886\n",
+       "DAL         442  9820\n",
+       "DEN          28  5920\n",
+       "LAX          33  6064\n",
+       "MSY          40  6823\n",
+       "ORD          99  5748"
+      ]
+     },
+     "execution_count": 154,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df4.iloc[:, [0, 2]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result = pd.concat([Cancelled, Diverted, Air], axis=1)\n",
+    "result['Air'] = result.apply(lambda x : x[2] - x[1] - x[0] , axis=1)\n",
+    "result.iloc[:, [0,1,3]]"
    ]
   },
   {
