--- a/2021 10 27/김찬울.ipynb
+++ b/2021 10 27/김찬울.ipynb
@@ -711,6 +711,42 @@
     "데이터프레임은 시리즈가 모여있는 것과 같다.\n",
     "열과 행 모두 늘어나며 아싸리 벡터의 모습을 생각하는게 쉽다."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 155,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "''"
+      ]
+     },
+     "execution_count": 156,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
